# sm64-tas-scripting

./: .clang-format  .gitignore  .gitignore.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
analysis/: print_scattershot_data.R
cmake/: AddOptimizationFlags.cmake  IncrementalCopy.cmake  MatchArchFlag.cmake
cmake/arch_detect/: arch_detect.cpp
lib/sm64-functions/: CMakeLists.txt
lib/tasfw-decomp/: CMakeLists.txt
lib/tasfw-decomp/include/sm64/: Math.hpp  ObjectFields.hpp  Types.hpp
platform_movement_brute_forcer/: platform_movement_brute_forcer.sln
platform_movement_brute_forcer/platform_movement_brute_forcer/: AdvanceM64FromStartToFrame.cpp  BitFsPyramidOscillation.cpp  BitFsPyramidOscillation_RunDownhill.cpp  BitFsPyramidOscillation_TurnAroundAndRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill_AtAngle.cpp  Brute.cpp  Brute.hpp  Camera.hpp  Game.cpp  Game.hpp  GetMinimumDownhillWalkingAngle.cpp  Inputs.cpp  Inputs.hpp  Macros.hpp  Magic.cpp  Magic.hpp  Movement.cpp  Movement.hpp  ObjectFields.hpp  RunDownhillOnInvertedPyramid.cpp  Script.cpp  Script.hpp  Script_BitFsPyramidOscillation.hpp  Slot.hpp  Trig.cpp  Trig.hpp  TryHackedWalkOutOfBounds.cpp  Types.hpp  main.cpp  platform_movement_brute_forcer.vcxproj  (+1 more)
scripts/: conan_installer.py  cpuid.py  msvc_arch_support.py
sm64-tas-scripting/: AdvanceM64FromStartToFrame.cpp  BitFsConfig.cpp  BitFsConfig.hpp  BitFsPyramidOscillation.cpp  BitFsPyramidOscillation_Iteration.cpp  BitFsPyramidOscillation_RunDownhill.cpp  BitFsPyramidOscillation_TurnAroundAndRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill_AtAngle.cpp  BrakeToIdle.cpp  Camera.hpp  Game.cpp  Game.hpp  GetMinimumDownhillWalkingAngle.cpp  Inputs.cpp  Inputs.hpp  Script.cpp  Script.hpp  Script_BitFsPyramidOscillation.hpp  Script_General.hpp  SharedLib.cpp  SharedLib.hpp  Sm64.hpp  Trig.cpp  Trig.hpp  TryHackedWalkOutOfBounds.cpp  Types.hpp  UltraTypes.hpp  main.cpp  math.cpp  math.hpp  pyramid.cpp  pyramid.hpp  sm64-tas-scripting.sln  sm64-tas-scripting.vcxproj  sm64-tas-scripting.vcxproj.filters  surface.cpp  surface.hpp
src/lib/: CMakeLists.txt
src/lib/scattershot/: CMakeLists.txt
src/lib/scattershot/include/: GlobalState.t.hpp  Scattershot.hpp  Scattershot.t.hpp  ScattershotThread.hpp  ScattershotThread.t.hpp  ThreadState.t.hpp
src/lib/tasfw-bitfs-sc-setup/: CMakeLists.txt
src/lib/tasfw-bitfs-sc-setup/include/tasfw/scripts/: BitFsScApproach.hpp
src/lib/tasfw-bitfs-sc-setup/src/: BitFsScApproach.cpp  BitFsScApproach_AttemptDr.cpp  BitFsScApproach_AttemptDr_BF.cpp
src/lib/tasfw-core/: CMakeLists.txt
src/lib/tasfw-core/include/tasfw/: Game.hpp  Inputs.hpp  Resource.hpp  Resource.t.hpp  Script.hpp  Script.t.hpp  Script.tpp  ScriptCompareHelper.hpp  ScriptStatus.hpp  SharedLib.hpp
src/lib/tasfw-core/src/: Game.cpp  Inputs.cpp  Resource.cpp  Script.cpp  SharedLib.cpp
src/lib/tasfw-decomp/: CMakeLists.txt
src/lib/tasfw-decomp/include/sm64/: Camera.hpp  ObjectFields.hpp  Pyramid.hpp  Sm64.hpp  Surface.hpp  SurfaceTerrains.hpp  Trig.hpp  Types.hpp
src/lib/tasfw-decomp/src/: Math.cpp  Pyramid.cpp  Surface.cpp
src/lib/tasfw-resources/: CMakeLists.txt
src/lib/tasfw-resources/include/tasfw/resources/: LibSm64.hpp  PyramidUpdate.hpp
src/lib/tasfw-resources/src/: LibSm64.cpp  PyramidUpdate.cpp  PyramidUpdate_Mario.cpp
src/lib/tasfw-scripts-bitfs-pyramid-osc/: CMakeLists.txt
src/lib/tasfw-scripts-bitfs-pyramid-osc/include/tasfw/scripts/: BitFSPyramidOscillation.hpp
src/lib/tasfw-scripts-bitfs-pyramid-osc/src/: BitFsPyramidOscillation.cpp  BitFsPyramidOscillation_GetMinimumDownhillWalkingAngle.cpp  BitFsPyramidOscillation_Iteration.cpp  BitFsPyramidOscillation_RunDownhill.cpp  BitFsPyramidOscillation_TurnAroundAndRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill_AtAngle.cpp
src/lib/tasfw-scripts-general/: CMakeLists.txt
src/lib/tasfw-scripts-general/include/tasfw/scripts/: General.hpp
src/lib/tasfw-scripts-general/src/: BrakeToIdle.cpp  GetMinimumDownhillWalkingAngle.cpp  TryHackedWalkOutOfBounds.cpp
tasfw-bruteforcers/: CMakeLists.txt
tasfw-bruteforcers/bitfs-turnaround/: CMakeLists.txt  config.json
tasfw-bruteforcers/bitfs-turnaround/src/: BitFsConfig.hpp  Scattershot_BitfsDr.hpp  TiltTarget.hpp  TiltTargetShot.hpp  main.cpp
tasfw-core/: CMakeLists.txt
tasfw-core/inc/sm64/: Math.hpp  Pyramid.hpp  Surface.hpp  Trig.hpp
tasfw-core/inc/tasfw/: Inputs.hpp  Resource.hpp  Resource.t.hpp  Script.hpp  Script.t.hpp  ScriptStatus.hpp  SharedLib.hpp
tasfw-core/inc/tasfw/resources/: LibSm64.hpp
tasfw-core/src/core/: Inputs.cpp
tasfw-core/src/decomp/: Surface.cpp
tasfw-core/src/resources/: LibSm64.cpp  PyramidUpdate.cpp  PyramidUpdate_Mario.cpp
tasfw-resources/: CMakeLists.txt
tasfw-resources/inc/: PyramidUpdate.hpp
tasfw-resources/src/: LibSm64.cpp  PyramidUpdate.cpp  PyramidUpdate_Mario.cpp
tasfw-scattershot/: CMakeLists.txt
tasfw-scripts/: CMakeLists.txt
tasfw-scripts/inc/: BitFSPyramidOscillation.hpp  BitFsScApproach.hpp  General.hpp  Scattershot_BitfsDr.hpp  Scattershot_BitfsDrApproach.hpp  Scattershot_BitfsDrRecover.hpp
tasfw-scripts/include/tasfw/scripts/: BitFSPyramidOscillation.hpp  BitFsScApproach.hpp  General.hpp
tasfw-scripts/src/bitfs-pyramid-osc/: BitFsPyramidOscillation.cpp  BitFsPyramidOscillation_GetMinimumDownhillWalkingAngle.cpp  BitFsPyramidOscillation_Iteration.cpp  BitFsPyramidOscillation_RunDownhill.cpp  BitFsPyramidOscillation_TurnAroundAndRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill.cpp  BitFsPyramidOscillation_TurnThenRunDownhill_AtAngle.cpp
tasfw-scripts/src/bitfs-sc-setup/: BitFsScApproach.cpp  BitFsScApproach_AttemptDr.cpp  BitFsScApproach_AttemptDr_BF.cpp
tasfw-scripts/src/general/: BrakeToIdle.cpp  GetMinimumDownhillWalkingAngle.cpp  TryHackedWalkOutOfBounds.cpp
tasfw-scripts/src/scattershot-bitfsdr/: Scattershot_BitfsDr.cpp  StateTracker_BitfsDr.cpp
(+24 files in other folders)
